# mmwave-ti-ros

./: OLD_README.md  README.md
radar2scan/: CMakeLists.txt  package.xml
radar2scan/config/: radar2scan_params.yaml
radar2scan/include/radar2scan/: cluster_laserscan.hpp  radar_cuda_kernel.hpp  radar_processing.hpp
radar2scan/launch/: cluster_laserscan.launch.py  radar2scan.launch.py
radar2scan/rviz/: radar_pcl_scan.rviz
radar2scan/src/: cluster_laserscan.cpp  cluster_laserscan_node.cpp  radar_cuda_kernel.cu  radar_processing.cpp  radar_processing_node.cpp
ti_mmwave_rospkg/cfg/: 6432_Classification.cfg  6432_Standard_Uncompressed.cfg  6843AOP_FineMotion.cfg  6843AOP_Standard_tuned.cfg  6843AOP_Standard_tuned2.cfg  6843AOP_StaticTracking.cfg  6843AOP_Tracking.cfg
ti_mmwave_rospkg/include/: DataHandlerClass.h  mmWave.h
ti_mmwave_rospkg/launch/: 1443_Standard.py  1642_Standard.py  1843_Standard.py  6432_Classification.py  6432_Standard.py  6843AOP_FineMotion.py  6843AOP_StaticTracking.py  rviz.rviz
ti_mmwave_rospkg/src/: DataHandlerClass.cpp
ti_mmwave_rospkg_msgs/: CMakeLists.txt
ti_mmwave_rospkg_msgs/msg/: RadarClassifier.msg  RadarMicroDopplerDataArray.msg  RadarMicroDopplerFeatureArray.msg  RadarMicroDopplerFeatureContents.msg
